<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="359dp"
        android:layout_height="77dp"
        android:layout_marginTop="60dp"
        android:text="@string/_0_00"
        android:textAlignment="center"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/divider"
        android:layout_width="410dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        android:foregroundTint="#FD0202"
        app:layout_constraintBottom_toTopOf="@+id/btn2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/_1"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btn4"
        app:layout_constraintEnd_toStartOf="@+id/btn2"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/_2"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btn5"
        app:layout_constraintEnd_toStartOf="@+id/btn3"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toEndOf="@+id/btn1"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/_3"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btn6"
        app:layout_constraintStart_toEndOf="@+id/btn2"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/_4"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btn7"
        app:layout_constraintEnd_toStartOf="@+id/btn5"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn1" />


    <Button
        android:id="@+id/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/_5"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btn8"
        app:layout_constraintEnd_toStartOf="@+id/btn6"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toEndOf="@+id/btn4"
        app:layout_constraintTop_toBottomOf="@+id/btn2" />


    <Button
        android:id="@+id/btn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/_6"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btn9"
        app:layout_constraintStart_toEndOf="@+id/btn5"
        app:layout_constraintTop_toBottomOf="@+id/btn3" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/_7"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnlimpar"
        app:layout_constraintEnd_toStartOf="@+id/btn8"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn4" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/_8"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btn0"
        app:layout_constraintEnd_toStartOf="@+id/btn9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn7"
        app:layout_constraintTop_toBottomOf="@+id/btn5" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/_9"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/btn8"
        app:layout_constraintTop_toBottomOf="@+id/btn6" />

    <Button
        android:id="@+id/btnlimpar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="72dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/limpar"
        android:textColor="#5E35B1"
        app:layout_constraintEnd_toStartOf="@id/btn0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn7" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/_0"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/btnlimpar"
        app:layout_constraintTop_toBottomOf="@+id/btn8" />

    <Button
        android:id="@+id/bntcobrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/cobrar"
        app:layout_constraintStart_toEndOf="@+id/editTextNumberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/btn0"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextNumberDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="308dp"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toStartOf="@+id/bntcobrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divider" />


</androidx.constraintlayout.widget.ConstraintLayout>